<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="问题描述"
                android:textColor="@color/light_slate_gray"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_describe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150dp"
                android:layout_marginTop="@dimen/_10dp"
                android:hint="@string/hint_feed_back"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:gravity="top"
                android:background="@drawable/shape_white_blue_padding_5"/>

            <Button
                android:id="@+id/btn_up_icon_5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30dp"
                android:background="@drawable/shape_white_blue_padding_5"
                android:text="@string/feedback_mast_up_picture"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_20dp"
                android:textColor="@color/blue_dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="邮箱*"
                    android:textSize="14sp"
                    android:textColor="@color/light_slate_gray"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:textCursorDrawable="@null"
                    android:hint="@string/feedback_email"
                    android:background="@drawable/shape_white_blue_padding_5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginBottom="@dimen/_15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="手机"
                    android:textSize="14sp"
                    android:textColor="@color/light_slate_gray"/>

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:textCursorDrawable="@null"
                    android:hint="@string/feedback_phone_no_hint"
                    android:maxLines="11"
                    android:background="@drawable/shape_white_blue_padding_5"/>
            </LinearLayout>

            <include layout="@layout/css_btn_sure" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>